--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
         <div class="search">
             <input id="pesquisaInput" type="text" placeholder="Digite o nome da cidade" spellcheck="false">
             <button id="botaoPesquisa">
-                <img src="/images/search.png">
+                <img src="images/search.png">
             </button>
         </div>
         <div class="weather">
-            <img src="/images/rain.png" id="weather-icon" />
+            <img src="images/rain.png" id="weather-icon" />
             <h1 id="temp"></h1>
             <h2 id="city"></h2>
             <div class="details">
                 <div class="col">
-                    <img src="/images/humidity.png" />
+                    <img src="images/humidity.png" />
                     <div>
                         <p id="umidade"></p>
                         <p>Umidade</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="/images/wind.png" />
+                    <img src="images/wind.png" />
                     <div>
                         <p id="vento"></p>
                         <p>Velocidade do Vento</p>
