--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </button>
         </div>
         <div class="weather">
-            <img src="images/rain.png" id="weather-icon" />
+            <img src='' id="weather-icon" />
             <h1 id="temp"></h1>
             <h2 id="city"></h2>
             <div class="details">
